--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "mocha": "1.17.1 ",
     "chai": "1.9.0",
     "sinon": "1.8.2",
-    "coffee-script": "1.7.1"
+    "coffee-script": "1.7.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.3.3",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-uglify": "~0.4.0"
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register -R spec"
