--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name"          : "fpJS",
-  "version"       : "0.0.7",
-  "description"   : "Functional object orient lib scala/haskell like",
-  "url"           : "https://github.com/kiberStender/fpJS.git",
-  "author"        : "Kleber Stender <kleber.stender@gmail.com>",
+  "name": "fpjs",
+  "version": "0.0.7",
+  "description": "Functional object oriented lib scala/haskell like",
+  "url": "https://github.com/kiberStender/fpJS.git",
+  "author": "Kleber Stender <kleber.stender@gmail.com>",
   "devDependencies": {
     "mocha": "1.17.1 ",
     "chai": "1.9.0",
@@ -19,5 +19,29 @@
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register -R spec"
-  }
+  },
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "chai": "^1.9.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt-contrib-uglify": "^0.4.1",
+    "sinon": "^1.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://kiberStender@github.com/kiberStender/fpJS.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kiberStender/fpJS/issues"
+  },
+  "homepage": "https://github.com/kiberStender/fpJS#readme"
 }
