--- a/package.json
+++ b/package.json
@@ -5,35 +5,18 @@
   "url": "https://github.com/kiberStender/fpJS.git",
   "author": "Kleber Stender <kleber.stender@gmail.com>",
   "devDependencies": {
-    "mocha": "1.17.1 ",
-    "chai": "1.9.0",
+    "chai": "^1.10.0",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.5.1",
+    "mocha": "^7.1.1",
     "sinon": "1.8.2",
-    "coffee-script": "1.7.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.3.3",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-uglify": "~0.4.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
+    "build": "webpack --mode development",
+    "build:prod": "webpack --mode production",
     "test": "mocha --compilers coffee:coffee-script/register -R spec"
-  },
-  "main": "Gruntfile.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "chai": "^1.9.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt-contrib-uglify": "^0.4.1",
-    "sinon": "^1.8.2"
   },
   "repository": {
     "type": "git",
