--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "url": "https://github.com/kiberStender/fpJS.git",
   "author": "Kleber Stender <kleber.stender@gmail.com>",
   "devDependencies": {
-    "chai": "^1.10.0",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.9.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.5.1",
+    "esm": "^3.2.25",
     "mocha": "^7.1.1",
+    "mocha-loader": "^4.0.2",
+    "mocha-webpack": "^2.0.0-beta.0",
     "sinon": "1.8.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
@@ -17,7 +23,8 @@
   "scripts": {
     "build": "webpack --mode development",
     "build:prod": "webpack --mode production",
-    "test": "mocha --compilers coffee:coffee-script/register -R spec"
+    "run": "node dist/main.js",
+    "test": "mocha-webpack --webpack-config webpack.config.js --recursive './test/**/*.test.coffee' --mode development"
   },
   "repository": {
     "type": "git",
